--- a/src/routes/game/components/zones/playerHand/PlayerHand.module.css
+++ b/src/routes/game/components/zones/playerHand/PlayerHand.module.css
@@ -62,3 +62,20 @@
   padding: 0;
   height: 100%;
 }
+
+@media (orientation: portrait) {
+  .manualMode {
+    position: fixed;
+    border-radius: 8px;
+    background-color: darkred;
+    z-index: 500;
+    bottom: 0;
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr;
+    gap: 10px;
+    padding: 10px;
+    transform: translateX(-50%);
+    right: 0; 
+    width: 100%; 
+  }
+}
